compiler tutorial - titanic 1

--- a/tests/compiler/sample_template/data-statistics-analysis.yml
+++ b/tests/compiler/sample_template/data-statistics-analysis.yml
@@ -15,13 +15,13 @@ contents:
               attr:
                 data: ./sample_input/titanic/titanic.csv
 
-          - title: Default analysis with csv and label (without metadata)
-            component:
-              _comment: refer to document section xxxx
-              class: DataStatisticsAnalysis
-              attr:
-                data: ./sample_input/titanic/titanic.csv
-                label: Survived
+#          - title: Default analysis with csv and label (without metadata)
+#            component:
+#              _comment: refer to document section xxxx
+#              class: DataStatisticsAnalysis
+#              attr:
+#                data: ./sample_input/titanic/titanic.csv
+#                label: Survived
       - title: Data Statistics Analysis with census data-set
         desc: census data in csv
         sections:
