--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,9 @@ tutorials/compiler/titanic2/result.csv
 tutorials/compiler/titanic2/titanic.csv
 tutorials/compiler/titanic2/train_data.csv
 
+tutorials/compiler/automobile/model.pkl
+tutorials/compiler/automobile/train_data.csv
+
 doc/build
 doc/source/data
 doc/source/explainer
