--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,7 @@ tutorials/compiler/titanic2/model.pkl
 tutorials/compiler/titanic2/result.csv
 tutorials/compiler/titanic2/titanic.csv
 tutorials/compiler/titanic2/train_data.csv
+tutorials/compiler/titanic2/*.pkl
 
 tutorials/compiler/automobile/model.pkl
 tutorials/compiler/automobile/train_data.csv
