--- a/.xmake.cfg
+++ b/.xmake.cfg
@@ -3,7 +3,6 @@ name=python
 download-requirements=true
 skip-tests=true
 no-linter=true
-python-executable=python-3.6.4-sap4-linuxx86_64/bin/python3.6
+python-executable=python-3.6.1-sap3-linuxx86_64/bin/python3.6m
 python-ignore-dep-issues=true
 UpdateGitSubmodules=true
-twine-upload=true
