--- a/production-services/build-service-nova/config.yml
+++ b/production-services/build-service-nova/config.yml
@@ -1,13 +1,12 @@
+branches:
+  - Branch: master
+    type: GITHUB_REL
 attributes:
-  milestonestaging: true
-
-defaultTemplate: all
-templates:
-  - Template: all
-    variants:
-      - sonar
-      - linuxx86_64
-
-variants:
-- Variant: sonar
-  args: [ '--buildplugin-option', 'options="-Psonar sonar:sonar  -Dsonar.branch=dev  -Dsonar.profile=SAPDefaultProfile_1_4_6"']
+    NoEmailToTeam: true
+    prepareDeployPackage: true
+    finalAssembly_restrictedPromotion: false
+    finalAssembly_customerRelease: true
+    finalAssembly_internalRelease: false
+    releasestaging: true
+    UpdateGitSubmodules: true
+    milestonestaging: true
