--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,6 @@
 sonar.projectKey=ML-TRAINING-PIPELINE
 sonar.projectName=ML-TRAINING-PIPELINE
-sonar.sources=mlf_training/
+sonar.sources=xai/
 sonar.tests=tests/
 sonar.test.exclusions=
 sonar.dynamicAnalysis=reuseReports
