--- a/requirements.txt
+++ b/requirements.txt
@@ -2,16 +2,17 @@ NumPy==1.17.4
 pandas==0.25.0
 scikit-learn==0.22.2
 scipy==1.3.1
+tqdm==4.44.1
 matplotlib==3.1.1
 seaborn==0.9.0
 fpdf==1.7.2
 wordcloud==1.5.0
 nltk==3.4.5
 ordered-set==3.1
-lime==0.1.1.32
 dill==0.3.0
-shap==0.29.3
 yattag==1.12.2
 pyyaml==5.3.1
 jsonschema==3.0.2
 PyPDF2==1.26.0
+shap>=0.35.0
+lime>=0.1.1.32
