--- a/wss-unified-agent.config
+++ b/wss-unified-agent.config
@@ -61,11 +61,11 @@ apiKey=
 # ! For CoDePipes you may look at CoDePipes for more information.
 userKey=
 
-projectName=
-projectVersion=SHC - ML TRAINING PIPELINE
+projectName=sap-explainable-ai
+projectVersion=
 projectToken=
 
-productName=
+productName=SHC - LEO AI BUSVC XAI OD 1.0
 productVersion=
 productToken=
 #updateType=APPEND
