--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ seaborn==0.9.0
 fpdf==1.7.2
 wordcloud==1.5.0
 nltk==3.4.5
-ordered-set==3.1
+ordered-set>=3.1.0
 dill==0.3.0
 yattag==1.12.2
 pyyaml==5.3.1
@@ -16,4 +16,4 @@ jsonschema==3.0.2
 PyPDF2==1.26.0
 pillow==7.0.0
 shap>=0.35.0
-lime>=0.1.1.32
+lime>=0.1.1, <=2
