--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,17 @@
 language: python
+addons:
+  apt:
+    packages: &common_packages
+    - libatlas-dev
+    - libatlas-base-dev
+    - liblapack-dev
+    - gfortran
+    - libgmp-dev
+    - libmpfr-dev
+    - libsuitesparse-dev
+    - ccache
+    - swig
+    - libmpc-dev
 python:
   - "3.6"      # current default Python on Travis CI
   - "3.7"
