--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,9 @@ python:
 # command to install dependencies
 install:
   - pip install -r tests/test_requirements.txt
+  - pip install coveralls
 # command to run tests
 script:
   - nosetests --tests=./tests -v --nologcapture --exe --with-xunit --with-xcoverage --cover-package=./xai --cover-erase
+after_success:
+  - coveralls
